<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="8dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="28dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageButton
                android:id="@+id/artworkDetailOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:backgroundTint="#00910909"
                app:srcCompat="@drawable/close" />

            <TextView
                android:id="@+id/textviewLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="Register"
                android:textStyle="bold" />
        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_marginRight="4dp"
            android:id="@+id/editTextFirstName"
            style="@style/RoundedInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:hint="@string/firstNameHint"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/neutral_100" />

        <EditText
            android:layout_marginLeft="4dp"
            android:id="@+id/editTextLastName"
            style="@style/RoundedInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:hint="@string/lastNameHint"
            android:inputType="textEmailAddress"
            app:backgroundTint="@color/neutral_100" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextEmailAddress"
        style="@style/RoundedInput"
        android:layout_marginVertical="10dp"
        android:hint="@string/editTextEmailHint"
        android:inputType="textEmailAddress"
        app:backgroundTint="@color/neutral_100" />

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/RoundedInput"
        android:layout_marginVertical="10dp"

        android:hint="@string/editTextPasswordHint"
        android:inputType="textPassword"
        app:backgroundTint="@color/neutral_100" />

    <EditText
        android:id="@+id/editTextConfirmPassword"
        android:layout_marginVertical="10dp"
        style="@style/RoundedInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editTextConfirmPasswordHint"
        android:inputType="textPassword"
        app:backgroundTint="@color/neutral_100" />

    <Button
        android:layout_marginVertical="30dp"
        android:id="@+id/register"
        style="@style/RoundedButton"
        android:text="Register" />

</LinearLayout>